--- a/resume.html
+++ b/resume.html
@@ -1,82 +1,71 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>My text page</title>
-    </head>
-    <body>
-            <link rel="stylesheet" type="text/css" href="css/style_3.css">
-            <div class="one">
-                <h1>简历</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style_1.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+        <header>
+            <div class="header">
+                    <h1>Logo</h1>
+                    <p>
+                        <a href="http:/www.github.com/"target="_blank">Github</a>
+                        <a href="http:/www.github.com/"target="_blank">Register</a>
+                        <a href="http:/www.github.com/"target="_blank">Login</a>
+                    </p>
             </div>
-            <div class="two">
-                    <div class="part">
-                            <h2>基本信息</h2>
-                            <div class="msg">
-                                <p><b>姓名</b> 张三</p>  
-                            </div>
-                            <div class="msg">
-                                <p><b>性别</b> 男</p>
-                            </div>
-                            <div class="msg">
-                                <p><b>应聘岗位</b> Web前端工程师</p>
-                            </div>
-                            <div class="clearfix"></div>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="part">
-                            <h2>联系方式</h2>
-                            <div class="tec">
-                                <p><b>手机</b> 12312341234</p>  
-                            </div>
-                            <div class="tec">
-                                <p><b>Email</b> <a href="http:/www.163.com/"target="_blank">163@163.com</a></p>
-                            </div>
-                            <div class="tec">
-                                <p><b>个人主页</b> <a href="http:/www.github.com/"target="_blank">github.com</a></p>
-                            </div>
-                            <div class="clearfix"></div>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="part">
-                            <h2>能力描述</h2>
-                            <div class="des">
-                                <p><b>技术能力</b></p>
-                                <p>熟练掌握HTML，CSSS，JAVAScript</p>
-                            </div>
-                            <div class="dex">
-                                <p><b>综合能力</b></p>
-                                <p>良好的沟通，主动积极，努力勤奋</p>
-                            </div>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="part">
-                            <h2>教育经历</h2>
-                            <div class="des">
-                                <p><b>本科</b></p>
-                                <p>百度前端技术学院小微学院</p>
-                            </div>
-                            <div class="dex">
-                                <p><b>研究生</b></p>
-                                <p>百度前端技术学院大斌学院</p>
-                            </div>
-                            <div class="clearfix"></div>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="part">
-                            <h2>项目经历</h2>
-                            <div class="des">
-                                <p><b>小度小度</b></p>
-                                <p>作为前端工程师角色参与了ABC组开发</p>
-                            </div>
-                            <div class="dex">
-                                <p><b>SAN Doc</b></p>
-                                <p>作为文档工程师参与了SAN Doc编写</p>
-                            </div>
-                            <div class="clearfix"></div>
-                    </div> 
-                    <div class="clearfix"></div>
-            </div>
+        </header>
+        <section class="banner">
+            <ul class="num">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+            </ul>
+        </section>
+        <section class="guid">
+            <ul class="chose">
+                <li>HOME</li>
+                <li>PROFILE</li>
+                <li>ABOUT</li>
+            </ul>
             <div class="clearfix"></div>
-    </body>
+        </section>
+        <section class="one">
+            <article class="a">
+                <p>This is Content 1</p>
+            </article>
+            <article class="b">
+                <p>MaybeContent 2</p>
+            </article>
+            <article class="c">
+                <p>Content 3</p>
+            </article>
+            <article class="e">
+                    <p>Content 4</p>
+            </article>
+            <article class="f">
+                    <p>Content 5</p>
+            </article>
+            <article class="g">
+                    <p>Content 6</p>
+            </article>
+            <article class="h">
+                    <p>Content 7</p>
+            </article>
+            <article class="i">
+                    <p>Content 8</p>
+            </article>
+            <article class="j">
+                    <p>Content 9</p>
+            </article>
+            <article class="k">
+                    <p>Content 10</p>
+            </article>
+        </section>
+</body>
 </html>
